src/components/styles/App.css
body {
  margin: 0px;
}
.main-container {
  display: flex;
  flex-direction: column;
  width: 100vw;
  height: 100vh;
}
.nav-container {
  position: sticky;
  top: 0px;
  width: 100%;
  z-index: 3;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: linear-gradient(79.09deg, #32b5f9 0%, #419ced 100%);
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.05);
  color: #fff;
  /* height: 80px; */
  padding: 10px;
  box-sizing: border-box;
}
.nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}
.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 240px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  padding: 12px 16px;
  z-index: 1;
}
.dropdown-content-guest {
  display: none;
  position: absolute;
  background-color: #f9f9f9;
  min-width: 130px;
  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
  padding: 12px 16px;
  z-index: 1;
}

.dropdown:hover .dropdown-content {
  display: block;
}
.dropdown:hover .dropdown-content-guest {
  display: block;
}
.dropdown:hover .btn {
  background-color: #32b5f9;
  color: white;
}
.title {
  height: 45px;
  width: 201px;
  color: #ffffff;
  font-family: Lato;
  font-size: 36px;
  font-weight: 900;
  line-height: 44px;
}

.filters-search-container {
  width: 100%;
  position: sticky;
  top: 70px;
  display: flex;
  z-index: 2;
  flex-direction: row;
  justify-content: space-between;
  background-color: #ffffff;
  align-items: center;
  border-bottom: 1px solid #f0f0f0;
  flex-wrap: wrap;
  --h-padding: 20px;
}
.btn {
  background-color: #ffffff; /* Green */
  color: black;
  text-decoration: none;
  text-align: center;
  font-size: 16px;
  margin: 8px var(--h-padding);
  cursor: pointer;
  outline: none;
  padding: 10px 20px;
  border: 1px solid #7a7a7a;
  border-radius: 3px;
}
.btn__img {
  width: 2rem;
  height: 2rem;
  object-fit: cover;
  border-radius: 50%;
}
.filter-container {
  display: flex;
  flex-direction: row;
}
.search-container {
  margin: 0px var(--h-padding);
  flex-grow: 1;
  justify-self: flex-end;
}
.card-map-container {
  display: grid;
  grid-template-columns: 1fr 1fr;
}
@media (max-width: 500px) {
  .card-map-container {
    grid-template-columns: 1fr;
  }
}
.card-container {
  background-color: #fbfbfb;
  padding: 20px 0;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-around;
}
.card {
  width: 44%;
  height: auto;
  margin-bottom: 20px;
  background-color: transparent;
  border: 0;
  border-radius: 0;
  box-shadow: none;
  position: relative;
  padding: 0;
}
h2 {
  padding-bottom: 4px;
  font-size: 1rem;
  margin: 10px 0 0;
}
.card__image {
  width: 100%;
  height: 180px;
  background-size: cover;
  background-position: center center;
}

.card__price {
  width: 70px;
  height: 44px;
  background-color: #41abf5;
  position: absolute;
  top: 120px;
  left: 0;
  color: #fafafa;
  font-size: 18px;
  display: flex;
  justify-content: center;
  align-items: center;
  letter-spacing: 0.03rem;
}
.card__info {
  color: #555;
  font-size: 14px;
  margin: 0;
  margin-bottom: 4px;
}
.map-container {
  padding-top: 20px;
  height: 450px;
  position: sticky;
  top: 225px;
}
.result-stats {
  text-align: right;
  color: #666;
  font-size: 15px;
}
.total-results {
  padding: 10px 30px;
}
.selected-container {
  width: 100%;
  padding: 5px 20px;
}
.extra-info {
  display: none;
  position: absolute;
}
.popover {
  overflow-x: hidden;
  height: 290px;
  width: 240px;
}
.extra-info-container {
  padding-top: 20px;
  margin-top: 175px;
}
.name-container {
  font-weight: 900;
  font-size: 18px;
}
.type-container {
  text-transform: uppercase;
  font-weight: 500;
}
.price-container {
  font-weight: 400;
  font-size: 13px;
}
.image-container {
  position: absolute;
  z-index: 0;
  top: 0px;
  left: 0px;
}
.info {
  margin-top: 3px;
}
.btn--primary {
  background-color: #32b5f9;
  color: white;
  border-color: white;
}
.bold {
  font-weight: bold;
}
.uppercase {
  text-transform: uppercase;
}
.right {
  display: block;
  margin-left: auto;
}
.text-center {
  text-align: center;
}
.m-l-1 {
  margin-left: 0.25rem;
}
.swal2-container {
  font-family: sans-serif;
}
.dateFilter {
  width: 300px;
}

